# GridLock_Mind-Mesh

./: .dockerignore  .gitignore  CurbFlow_AI_PRD_README.md  Dockerfile  README.md  TEMP_README.md  requirements.txt
curbflow-ai/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
curbflow-ai/apps/api/: dependencies.py  main.py  schemas.py
curbflow-ai/apps/web/: next.config.ts  package.json  tsconfig.json
curbflow-ai/artifacts/metrics/: deep_metrics.json  feature_importance.csv  model_card.md  ranker_metrics.json
curbflow-ai/artifacts/models/: model_metadata.json  ranker_lgbm.txt  scaler.pkl
curbflow-ai/artifacts/reports/: eda_summary.json
curbflow-ai/configs/: model_config.yaml  planner_config.yaml
curbflow-ai/data/interim/: patrol_graph_edges.parquet
curbflow-ai/data/processed/: coverage_audit.parquet  demo_presets.json  junction_basins.parquet  patrol_graph_features.parquet  patrol_myopia.parquet  recommendations.parquet  zones.geojson
curbflow-ai/docs/: architecture.md
curbflow-ai/scripts/: run_data_audit.py  run_feature_build.py  run_full_pipeline.py  run_graph_build.py  run_model_benchmark.py  run_pfdi_scoring.py  run_predict.py  run_preprocess.py  run_recommendations.py  run_train_deep.py  run_train_ranker.py  run_zone_build.py  seed_demo_db.py
curbflow-ai/tests/: test_api.py  test_exposure.py  test_graph_building.py  test_model_forward.py  test_novel_features.py  test_pfdi.py  test_planner.py  test_repeat_pressure_no_leakage.py  test_sequence_dataset.py  test_time_conversion.py  test_violation_parser.py
frontend/: package.json
(+214 files in other folders)
